EKS-cluster/Ingress/Dashboard-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  minReadySeconds: 3
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: dashboard-pod
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard-cont
          image: shaikkhajaibrahim/dashboardservice:1.0.0
          ports:
            - containerPort: 80
---
## dashboard service file
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
