EKS-cluster/Ingress/ingress-control.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /spc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: spc-svc
                port:
                  number: 8080
          - path: /nop(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nop-svc
                port:
                  number: 5000
          - path: /dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dashboard-svc
                port:
                  number: 80
